<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Appointment App</string>

    <string name="forgot_pass">forgot_pass</string>
    <string name="forgot_password">Forgot password?</string>

    <string name="dont_have_a">Do not have an account?</string>
    <string name="welcome_bac">Welcome Back ! </string>
    <string name="hvact">Already have an account?</string>
    <string name="doc_log">I am a Doctor!!</string>


    <!--    <string name="already_hav">Already have an account?</string>-->

    <!--Admin patient History-->
    <string name="user_age_tv">Age:</string>
    <string name="user_dob_tv">DOB:</string>
    <string name="user_age">29 Yrs</string>
    <string name="user_email">rugved.adwankar98@gmail.com</string>
    <string name="user_visits">Visited: </string>
    <string name="user_visit">10 </string>
    <string name="user_dob">12-06-1998</string>
    <string name="user_gender_tv">Gender: </string>
    <string name="user_gender">Female </string>
    <string name="user_weight_tv"> Weight: </string>
    <string name="user_weight">170kg </string>
    <string name="user_height_tv"> Height: </string>
    <string name="user_height">170cm </string>
    <string name="user_mob_tv"> Mobile No.: </string>
    <string name="user_mob">9821657632</string>
    <string name="user_medhis_tv">Medical History: </string>
    <string name="user_medhis">Diabetese, BP, stiffness,bald, backache, migrane</string>
    <string name="user_occu_tv">Occupation: </string>
    <string name="user_occu">Software Developer</string>
    <string name="user_add_tv">Address: </string>
    <string name="user_add">425, Mohna palace, this section, random road, goa-420 132</string>


    <!--Customer Register-->
    <string name="pat_reg">Register With Us!</string>
    <string name="pat_re_info">Your Information is safe with us</string>
    <string name="pat_reg_username">Full Name</string>
    <string name="pat_reg_email">Email</string>
    <string name="pat_reg_pass">New password</string>
    <string name="pat_reg_cpass">Confirm password</string>
    <string name="pat_reg_signin">Sign In</string>
    <string name="pat_reg_submit">Sign Up</string>


    <!--Customer Login-->
    <string name="pat_log_signup">Sign Up</string>
    <string name="pat_log_submit">Sign In</string>
    <string name="pat_log_email">Enter your email</string>
    <string name="pat_log_pass">Enter your password</string>
    <string name="pat_log_fpass">Forgot password?</string>

    <!--Doctor Login-->
    <string name="doc_log_signup">I am Admin</string>
    <string name="doc_log_submit">Sign In</string>
    <string name="doc_log_email">Enter your email</string>
    <string name="doc_log_pass">Enter your password</string>
    <string name="doc_log_fpass">Forgot password?</string>

    <string name="edit_profil">Edit Profile</string>
    <string name="user_date">Date</string>
    <string name="hist_date">placeholder</string>
    <string name="exercise_give">Exercise Given</string>
    <string name="hist_date_">Date</string>
    <string name="hist_date_PH">placeholder</string>
    <string name="exercise_given">Exercise Given</string>
    <string name="medicines">Medicines</string>


    <!--user dashboard-->
    <string name="save">SAVE</string>
    <string name="visits">Visits</string>
    <string name="bookappountment">Book Appointment</string>
    <string name="chatwithdoc">Chat with out doctor</string>
    <string name="historybtn">History</string>
    <string name="appointmentdate">Appointment On</string>
    <string name="user_view_visit">placeholder</string>
    <string name="user_timing">09:30 pm</string>
    <string name="user_visit_date">12-06-21</string>
    <string name="user_name">Rugved Adwankar</string>
    <string name="logoutbtn">Logout</string>

    <!--    Appointment booking page-->
    <string name="appointmenbookingheading">Appointment Booking</string>
    <string name="date_heading">Date *</string>
    <string name="date_abp_ib">date</string>
    <string name="time_ubp_tv">Time *</string>
    <string name="Morning">RadioButton</string>
    <string name="Morning_ubp_rb">Morning</string>
    <string name="evening_ubp_rb">Evening</string>
    <string name="disclaimer_ubp_tv">Disclaimer: Doctor will allot time as per their Schedule.</string>
    <string name="confirm_ubp_btn">Confirm</string>
    <string name="Cancel">cancel_ubp_btn</string>

    <!--DOCTOR EDIT PROFILE TEXTVIEW-->
    <string name="doc_ep_qual_tv">Qualification*</string>

    <string name="doc_ep_fname_tv">First Name*</string>
    <string name="doc_ep_lname_tv">Last Name*</string>
    <string name="doc_ep_email_tv">Email*</string>
    <string name="doc_ep_mob_tv">Mobile No*</string>
    <string name="doc_ep_dob_tv">Date of Birth*</string>
    <string name="doc_ep_gender_tv">Gender*</string>
    <string name="doc_ep_exp_tv">Experience</string>
    <string name="doc_ep_spec_tv">Speciality*</string>
    <string name="doc_ep_avail_tv">Availability*</string>
    <string name="doc_ep_ftime_tv">From Time*</string>
    <string name="doc_ep_ttime_tv">To Time*</string>
    <string name="doc_ep_about_tv">About You</string>
    <string name="doc_ep_add_tv">Address</string>

    <!--PATIENT EDIT PROFILE TEXTVIEW-->
    <string name="pat_ep_fname_tv">Full Name*</string>
    <string name="pat_ep_email_tv">Email*</string>
    <string name="pat_ep_dob_tv">Date of Birth*</string>
    <string name="pat_ep_gender_tv">Gender*</string>
    <string name="pat_ep_mob_tv">Mobile No.*</string>
    <string name="pat_ep_prof_tv">Profession*</string>

    <string name="pat_ep_weight_tv">Weight</string>
    <string name="pat_ep_height_tv">Height</string>
    <string name="pat_ep_medical_tv">Any Medical History?</string>
    <string name="pat_ep_address_tv">Address</string>
    <string name="AP_add_doctor">Add</string>
    <string name="my_patients">Patient List</string>
    <string name="CV_doc_list">Doctor_name</string>
    <string name="appointment_confirmation">Appointment confirmation</string>
    <string name="rescheduling_btn">Reschedule</string>
    <string name="patient_list_btn">Patient List</string>
    <string name="CV_patient_name">patient name</string>


    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string-array name="availability_array">
        <item>Morning</item>
        <item>Evening</item>
    </string-array>

</resources>