<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/doc_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signupback"
    tools:context=".doctor_login">


    <EditText
        android:id="@+id/doc_log_email"
        android:layout_width="308dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="370dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:textAlignment="viewStart"
        tools:ignore="RtlCompat,RtlSymmetry"
        android:paddingLeft="16dp"
        android:background="@drawable/roundtxtbox"
        android:hint="@string/doc_log_email"
        android:inputType="textEmailAddress"
        android:textColorHint="#A8504C4C"
        />

    <EditText
        android:id="@+id/doc_log_pass"
        android:layout_width="308dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="440dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:textAlignment="viewStart"
        tools:ignore="RtlCompat,RtlSymmetry"
        android:background="@drawable/roundtxtbox"
        android:hint="@string/doc_log_pass"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:textColorHint="#A8504C4C" />

    <TextView
        android:id="@+id/doc_log_fpass"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="510dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:text="@string/doc_log_fpass"
        android:textAppearance="@style/forgot_pass" />

    <Button
        android:id="@+id/doc_log_submit"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="308dp"
        android:layout_height="58dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="565dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:background="@drawable/round_btn"
        android:text="@string/doc_log_submit"
        android:textAppearance="@style/button"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/welcome_bac"
        android:layout_width="117dp"
        android:layout_height="88dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="133dp"
        android:layout_marginEnd="240dp"
        android:layout_marginRight="240dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center_horizontal|top"
        android:shadowColor="#00DF1616"
        android:text="@string/welcome_bac"
        android:textAppearance="@style/welcome_bac"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/dont_have_a"
        android:layout_width="214dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="655dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:gravity="center_horizontal|top"
        android:text="@string/dont_have_a"
        android:textAppearance="@style/dont_have_a" />

    <TextView
        android:id="@+id/doc_log_signup"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="295dp"
        android:layout_marginTop="655dp"
        android:layout_marginEnd="65dp"
        android:layout_marginRight="65dp"
        android:gravity="center_horizontal|top"
        android:text="@string/doc_log_signup"
        android:textAppearance="@style/pat_log_signup" />

    <ImageView
        android:id="@+id/loginpic"
        android:layout_width="196dp"
        android:layout_height="184dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="170dp"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:src="@drawable/loginpic" />

</RelativeLayout>